@@ -257,7 +257,8 @@ class Element {
       virtual void endEdit()                                   {}
       virtual void updateGrips(int* grips, QRectF*) const      { *grips = 0;       }
       virtual QPointF gripAnchor(int) const   { return QPointF(); }
-      virtual void setGrip(int, const QPointF&)    {}
+      virtual void setGrip(int, const QPointF&);
+      virtual QPointF getGrip(int) const;
 
       int track() const                       { return _track; }
       virtual void setTrack(int val)          { _track = val;  }
